--- a/Vacuum/amount_of_paperVScor_at_30mbar.ipynb
+++ b/Vacuum/amount_of_paperVScor_at_30mbar.ipynb
@@ -51,7 +51,7 @@
     "    plt.plot(lijst_frame, lijst_ywaarde_omgekeerd, 'r')\n",
     "    plt.xlabel(\"Tijd (Frames)\")\n",
     "    plt.ylabel(\"Hoogte (pixels)\")\n",
-    "    plt.title(f\"Hoogte vs Tijd ({papier} mbar)\")\n",
+    "    plt.title(f\"Hoogte vs Tijd ({papier} papiertjes)\")\n",
     "    plt.show()\n",
     "\n",
     "    # Maxima vinden (stuiters)\n",
@@ -338,9 +338,9 @@
    ],
    "source": [
     "plt.errorbar(lijst_papier, lijst_CoR, capsize = 5, markersize = 2, fmt='o')\n",
-    "plt.xlabel(\"Druk (mbar)\")\n",
+    "plt.xlabel(\"Aantal papiertjes\")\n",
     "plt.ylabel(\"Restitutiecoëfficiënt (CoR)\")\n",
-    "plt.title(\"CoR vs Druk\")\n",
+    "plt.title(\"CoR vs aantal vellen papier\")\n",
     "plt.show()\n",
     "\n",
     "print(lijst_papier)\n",
@@ -368,7 +368,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# aantal lagen papier\n",
-    "lijst_papier = [1, 5, 10, 50, 150, 200, 250, 300]  # mbar\n",
+    "lijst_papier = [1, 5, 10, 50, 150, 200, 250, 300]  # ",
     "\n",
     "\n",
     "# --- CoR-waarden uit berekeningen ---\n",
